# clconvert

./: LICENSE  README.md  pyproject.toml
cell_locator_files/: convert.py  converters.py
cell_locator_files/versions/: v0.0.0+2020.04.16.py  v0.0.0+2020.08.26.py  v0.1.0+2020.09.18.py
clconvert/: __init__.py  convert.py  converters.py
clconvert/versions/: v0.0.0+2019.01.26.py  v0.0.0+2020.04.16.py  v0.0.0+2020.08.26.py  v0.1.0+2020.09.18.py  v0.1.1+2021.06.11.py
usage/: compare.sh  idem.sh  update.sh
